# touzibishi

./: .gitignore  IRIS_Development_Spec_v0.4.md  IRIS_System_Spec_v0.1.md  README.md  UI-PREVIEW.html  deep_research_skill_prompt.md  findings.md  iris.db  iris_ui_spec_v1.0.md  prism-v1.html  progress.md  task_plan.md  改造方案反馈.md
iris/: .env.example  .gitignore  extract_assumptions.py  iris.db  iris_config.yaml  main.py  pyproject.toml  show_thinking.py  test_dcf_compare.py  test_dcf_live.py  trace_detail.json
iris/backend/: api.py  sessions.py
iris/core/: budget.py  config.py  context.py  evaluator.py  harness.py  invariants.py  loop_detector.py  schemas.py  skill_loader.py  tool_hooks.py  tracing.py
iris/llm/: base.py  openai_client.py
iris/memory/: experience_library.json  portfolio.json
iris/scripts/: eval_prompts.py  upload_prompts.py
iris/soul/: analysis_guide.md  evaluator.md  process.md  reflection.md  role.md  self_check.md  tools.md  v0.1.md
iris/tests/: test_config_mode.py  test_context.py  test_dcf_skill.py  test_e2e_context.py  test_experience_mode.py  test_guards.py  test_harness.py  test_integration.py  test_invariants.py  test_knowledge.py  test_knowledge_ingest.py  test_news_feed.py  test_retrieval.py  test_retrieval_persistence.py  test_schemas.py  test_session_accumulator.py
iris/tools/: base.py  chunker.py  embedder.py  financials.py  knowledge.py  knowledge_ingest.py  market.py  memory.py  news_feed.py  retrieval.py  search.py  sec_filing.py  semantic_search.py  transcripts.py  unified_memory.py  url_ingest.py
iris/ui/: app.py
(+105 files in other folders)
